logo vertical-align fix

--- a/app/assets/css/screen.styl
+++ b/app/assets/css/screen.styl
@@ -41,6 +41,9 @@ pad3 = 30px
 a
   color dark2
   text-decoration none
+  img
+    vertical-align middle
+    padding-right pad1
 
 article
   h1
